--- a/styles/css/accueil.css
+++ b/styles/css/accueil.css
@@ -4,24 +4,37 @@
     voir le problème des fonts
 */
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 body {
   width: 100%;
   font-family: "Roboto", sans-serif;
-  color: #333; }
+  color: #333;
+}
 
 main {
-  width: 100%; }
+  width: 100%;
+}
 
 h1, h2, h3 {
   font-family: "Shrikhand", cursif, sans-cerif;
-  font-weight: lighter; }
+  font-weight: lighter;
+}
 
 section {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  padding: 1em;
+}
+
+strong {
+  font-weight: bold;
+}
+
+img {
+  width: 200px;
+}
 
 button {
   padding: 20px;
@@ -29,26 +42,90 @@ button {
   border: none;
   color: white;
   background-image: linear-gradient(#FF79DA, #9356DC);
-  cursor: pointer; }
+  cursor: pointer;
+}
+
+.step-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+@media screen and (min-width: 768px) {
+  .step-container .step:nth-child(2) {
+    align-self: center;
+  }
+  .step-container .step:first-child {
+    align-self: flex-start;
+  }
+}
+.step-container .step {
+  width: calc(100% - 0.5em);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #f4f2f2;
+  border-radius: 30px;
+  box-shadow: 1px 5px 5px lightgrey;
+  padding: 2em 0;
+  margin: 10px 0;
+  transition: background-color 0.3s;
+}
+@media screen and (min-width: 768px) {
+  .step-container .step {
+    width: 40%;
+  }
+}
+.step-container .step p {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0;
+  position: relative;
+  left: -0.5em;
+}
+.step-container .step p span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 50%;
+  color: white;
+  background-color: #9356DC;
+}
+.step-container .step p i {
+  margin: 0 1em;
+  color: gray;
+  transition: color 0.3s;
+}
+.step-container .step:hover {
+  background-color: #f4eefc;
+}
+.step-container .step:hover i {
+  color: #9356DC;
+}
 
 header {
   display: flex;
   justify-content: center;
-  align-items: center; }
-  header img {
-    transform: scale(0.4); }
+  align-items: center;
+}
+header img {
+  transform: scale(0.7);
+}
 
 .position {
   text-align: center;
   background-color: #eceaea;
   padding: 1rem;
-  margin: 0; }
-  .position i {
-    margin-right: 10px; }
+  margin: 0;
+}
+.position i {
+  margin-right: 10px;
+}
 
 section:first-of-type {
   text-align: center;
   padding: 3rem;
-  background-color: #f4f2f2; }
-
-/*# sourceMappingURL=accueil.css.map */
+  background-color: #f4f2f2;
+}/*# sourceMappingURL=accueil.css.map */
