--- a/styles/sass/Utils/_variables.scss
+++ b/styles/sass/Utils/_variables.scss
@@ -1,4 +1,18 @@
+@use "sass:color";
 
+
+//  BREAKPOINTS
+
+$breakpoints : (
+    large-mobile : 576px,
+    tablette : 768px,
+    desktop : 992px,
+);
+
+
+
+
+//  VARIABLES COULEURS
 
 $primary-color : #9356DC ;
 $secondary-color : #FF79DA;
@@ -6,3 +20,12 @@ $tertiary-color : #99E2D0;
 $light-grey : #f4f2f2;
 $grey : #eceaea;
 $black : #333;
+
+
+$primary-color_light : color.scale($primary-color,  $lightness: 90%);
+
+
+
+//  VARIABLES ANIMATION, TRASITION
+
+$transition-duration : 0.3s;
