--- a/styles/sass/Utils/_variables.scss
+++ b/styles/sass/Utils/_variables.scss
@@ -23,6 +23,7 @@ $black : #333;
 
 
 $primary-color_light : color.scale($primary-color,  $lightness: 90%);
+$tertiary-color_darken : darken($tertiary-color, 50%);
 
 
 
