--- a/styles/sass/accueil.scss
+++ b/styles/sass/accueil.scss
@@ -6,6 +6,7 @@
 
 @import './Composants/button';
 @import './Composants/step';
+@import './Composants/restaurant';
 
 @import './Layout/header_accueil';
 
