--- a/styles/sass/menu.scss
+++ b/styles/sass/menu.scss
@@ -5,11 +5,8 @@
 @import './Base/global';
 
 @import './Composants/button';
-@import './Composants/step';
-@import './Composants/restaurant';
 
-@import './Layout/header_accueil';
+@import './Layout/header_menu';
 @import './Layout/footer';
 
-@import './Pages/accueil';
-
+@import './Pages/menu';
