--- a/styles/css/accueil.css
+++ b/styles/css/accueil.css
@@ -41,13 +41,22 @@ a, a:visited {
   color: #333;
 }
 
+.title {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
 button {
-  padding: 20px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 10px 20px;
   border-radius: 30px;
   border: none;
   color: white;
   background-image: linear-gradient(#FF79DA, #9356DC);
   cursor: pointer;
+  align-self: center;
 }
 
 .step-container {
@@ -123,6 +132,11 @@ button {
 }
 .restaurant a img {
   width: 100%;
+  height: 150px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: bottom;
+     object-position: bottom;
 }
 .restaurant a .description {
   display: flex;
@@ -130,6 +144,9 @@ button {
   align-items: flex-start;
   justify-content: space-between;
   padding: 15px 10px;
+  /*& > p{
+      background-clip: text;
+  }*/
 }
 .restaurant a .description div {
   display: flex;
@@ -138,24 +155,19 @@ button {
 .restaurant a .description div p, .restaurant a .description div h3 {
   margin: 2px;
 }
-.restaurant a .description > p {
-  -webkit-background-clip: text;
-          background-clip: text;
-}
 .restaurant a .description .icons {
   font-size: 1.5rem;
   padding-right: 10px;
   margin: 0;
 }
 .restaurant a .description .icons .fas {
-  background: linear-gradient(to top, #FF79DA, #9356DC);
   display: none;
-  /* &:before{
-       display: inline;
-   }*/
 }
 .restaurant a .description .icons:hover .fas {
   display: inline;
+  background: linear-gradient(to top, #FF79DA, #9356DC);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .restaurant a .description .icons:hover .far {
   display: none;
@@ -168,7 +180,7 @@ button {
   font-weight: bold;
   padding: 0.5em 1em;
   font-size: 0.7em;
-  color: #1b6150;
+  color: #2c9c81;
 }
 
 header {
@@ -176,8 +188,36 @@ header {
   justify-content: center;
   align-items: center;
 }
-header img {
-  transform: scale(0.7);
+
+footer {
+  padding: 1em;
+  background-color: #353434;
+}
+footer ul {
+  padding-left: 0;
+}
+footer ul li {
+  list-style: none;
+  margin-bottom: 10px;
+  font-weight: bold;
+  color: white;
+  font-size: 0.8rem;
+}
+footer ul li:first-of-type {
+  margin-bottom: 20px;
+  font-family: "Shrikhand", cursif, sans-cerif;
+  font-size: 1.1rem;
+}
+footer ul li a {
+  color: white;
+}
+footer ul li a:visited {
+  color: white;
+}
+footer ul li i {
+  margin-right: 5px;
+  width: 20px;
+  color: white;
 }
 
 .position {
