--- a/styles/sass/menu.scss
+++ b/styles/sass/menu.scss
@@ -5,8 +5,10 @@
 @import './Base/global';
 
 @import './Composants/button';
+@import './Composants/meal_item';
 
 @import './Layout/header_menu';
+@import './Layout/meal_section';
 @import './Layout/footer';
 
 @import './Pages/menu';
