ajout des animations et modifications du html en conséquence

--- a/styles/css/accueil.css
+++ b/styles/css/accueil.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
+@-webkit-keyframes showing {
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+@keyframes showing {
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
 /*
     voir le problème des fonts
 */
@@ -57,6 +69,7 @@ button {
   background-image: linear-gradient(#FF79DA, #9356DC);
   cursor: pointer;
   align-self: center;
+  box-shadow: 0 2px 4px 0px #a2a0a0;
 }
 
 .step-container {
@@ -125,6 +138,7 @@ button {
   border-radius: 20px;
   display: flex;
   margin-bottom: 20px;
+  background-color: white;
 }
 .restaurant a {
   width: 100%;
@@ -144,13 +158,13 @@ button {
   align-items: flex-start;
   justify-content: space-between;
   padding: 15px 10px;
-  /*& > p{
-      background-clip: text;
-  }*/
 }
 .restaurant a .description div {
   display: flex;
   flex-direction: column;
+}
+.restaurant a .description div .description-title {
+  font-weight: bold;
 }
 .restaurant a .description div p, .restaurant a .description div h3 {
   margin: 2px;
@@ -199,7 +213,6 @@ footer ul {
 footer ul li {
   list-style: none;
   margin-bottom: 10px;
-  font-weight: bold;
   color: white;
   font-size: 0.8rem;
 }
@@ -239,6 +252,6 @@ section:first-of-type {
   padding: 3rem;
 }
 
-section:nth-child(even) {
+section:nth-child(odd) {
   background-color: white;
 }/*# sourceMappingURL=accueil.css.map */
