--- a/styles/sass/Composants/_restaurant.scss
+++ b/styles/sass/Composants/_restaurant.scss
@@ -7,6 +7,7 @@
     border-radius: 20px;
     display: flex;
     margin-bottom: 20px;
+    background-color: white;
 
 
     & a{
@@ -32,6 +33,10 @@
                 display: flex;
                 flex-direction: column;
 
+                .description-title{
+                    font-weight: bold;
+                }
+
                 & p, h3{
                     margin: 2px;
 
@@ -40,9 +45,6 @@
 
             }
 
-            /*& > p{
-                background-clip: text;
-            }*/
 
             & .icons{
                 font-size: 1.5rem;
