--- a/styles/sass/Layout/_header_menu.scss
+++ b/styles/sass/Layout/_header_menu.scss
@@ -1,9 +1,14 @@
 
 header{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     flex-direction: row;
+    padding: 0 30px;
+
+    i{
+        font-size: 1.3rem;
+    }
 
 
     & .fa-arrow-right{
