--- a/styles/css/accueil.css
+++ b/styles/css/accueil.css
@@ -58,7 +58,7 @@ a, a:visited {
   font-weight: bold;
 }
 
-button {
+button:not(.icons) {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -71,7 +71,7 @@ button {
   align-self: center;
   box-shadow: 0 2px 4px 0px #a2a0a0;
 }
-button:hover {
+button:not(.icons):hover {
   background-image: linear-gradient(#ff93e1, #a16be0);
   box-shadow: 0 2px 4px 0px #3c3a3a;
 }
@@ -175,8 +175,10 @@ button:hover {
 }
 .restaurant a .description .icons {
   font-size: 1.5rem;
-  padding-right: 10px;
-  margin: 0;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin-right: 10px;
 }
 .restaurant a .description .icons .fas {
   display: none;
