--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -58,7 +58,7 @@ a, a:visited {
   font-weight: bold;
 }
 
-button {
+button:not(.icons) {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -71,7 +71,7 @@ button {
   align-self: center;
   box-shadow: 0 2px 4px 0px #a2a0a0;
 }
-button:hover {
+button:not(.icons):hover {
   background-image: linear-gradient(#ff93e1, #a16be0);
   box-shadow: 0 2px 4px 0px #3c3a3a;
 }
