--- a/styles/sass/Composants/_restaurant.scss
+++ b/styles/sass/Composants/_restaurant.scss
@@ -48,8 +48,13 @@
 
             & .icons{
                 font-size: 1.5rem;
-                padding-right: 10px;
-                margin: 0;
+                //padding-right: 10px;
+                //margin: 0;
+                //  modif en button
+                background-color: transparent;
+                border: none;
+                padding: 0;
+                margin-right: 10px;
             
 
                 & .fas{
