--- a/styles/sass/Utils/_variables.scss
+++ b/styles/sass/Utils/_variables.scss
@@ -4,9 +4,10 @@
 //  BREAKPOINTS
 
 $breakpoints : (
-    large-mobile : 576px,
+    mobile-landscape : 576px,
     tablette : 768px,
     desktop : 992px,
+    desktop-wide : 1440px,
 );
 
 
