--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -205,6 +205,11 @@ footer ul li i {
 main {
   background-color: #f4f2f2;
 }
+@media screen and (min-width: 576px) {
+  main {
+    background-color: white;
+  }
+}
 main > img {
   width: 100%;
   -o-object-fit: cover;
@@ -217,8 +222,14 @@ main section {
   position: relative;
   top: -60px;
   background-color: #f4f2f2;
-  max-width: 600px;
+  max-width: 576px;
   margin: auto;
+}
+@media screen and (min-width: 576px) {
+  main section {
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+  }
 }
 main section > div:first-of-type {
   display: flex;
