--- a/styles/sass/menu.scss
+++ b/styles/sass/menu.scss
@@ -1,5 +1,7 @@
 
 @import './Utils/variables';
+@import './Utils/animations';
+@import './Utils/mixin';
 
 @import './Base/font';
 @import './Base/global';
