--- a/styles/css/accueil.css
+++ b/styles/css/accueil.css
@@ -1,5 +1,31 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
+@-webkit-keyframes hidden {
+  99% {
+    z-index: 2;
+  }
+  100% {
+    z-index: -1;
+  }
+}
+@keyframes hidden {
+  99% {
+    z-index: 2;
+  }
+  100% {
+    z-index: -1;
+  }
+}
+@-webkit-keyframes rotation {
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotation {
+  to {
+    transform: rotate(360deg);
+  }
+}
 @-webkit-keyframes showing {
   to {
     top: 0;
@@ -19,14 +45,20 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   width: 100%;
   font-family: "Roboto", sans-serif;
   color: #333;
+  min-height: 100%;
 }
 
 main {
   width: 100%;
+  position: relative;
 }
 
 h1, h2, h3 {
@@ -218,6 +250,34 @@ button:not(.icons):hover {
   color: #2c9c81;
 }
 
+.loading-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: white;
+  padding-top: 200px;
+  overflow: hidden;
+  transform-origin: top;
+  -webkit-animation: hidden 3s 0s forwards;
+          animation: hidden 3s 0s forwards;
+}
+.loading-container .loading {
+  width: 3rem;
+  height: 3rem;
+  border: 3px solid;
+  border-top-color: transparent;
+  border-right-color: #9356DC;
+  border-bottom-color: #9356DC;
+  border-left-color: #9356DC;
+  border-radius: 50%;
+  -webkit-animation: rotation 1s 0s linear 4;
+          animation: rotation 1s 0s linear 4;
+}
+
 header {
   display: flex;
   justify-content: center;
@@ -273,7 +333,7 @@ section:first-of-type {
   padding: 3rem;
 }
 
-section:nth-child(odd) {
+section:nth-child(even) {
   background-color: white;
 }
 
