--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -1,5 +1,31 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
+@-webkit-keyframes hidden {
+  99% {
+    z-index: 2;
+  }
+  100% {
+    z-index: -1;
+  }
+}
+@keyframes hidden {
+  99% {
+    z-index: 2;
+  }
+  100% {
+    z-index: -1;
+  }
+}
+@-webkit-keyframes rotation {
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotation {
+  to {
+    transform: rotate(360deg);
+  }
+}
 @-webkit-keyframes showing {
   to {
     top: 0;
@@ -19,14 +45,20 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   width: 100%;
   font-family: "Roboto", sans-serif;
   color: #333;
+  min-height: 100%;
 }
 
 main {
   width: 100%;
+  position: relative;
 }
 
 h1, h2, h3 {
