--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -131,6 +131,7 @@ button:not(.icons):hover {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
 }
 .meal-item .meal-item-container .meal-item-description p {
   margin: 0;
@@ -154,6 +155,10 @@ button:not(.icons):hover {
 }
 .meal-item:hover i {
   width: 15%;
+}
+.meal-item:hover i:before {
+  -webkit-animation: rotation 0.3s 0s linear forwards;
+          animation: rotation 0.3s 0s linear forwards;
 }
 
 header {
@@ -205,7 +210,7 @@ header .fa-arrow-right {
 }
 
 footer {
-  padding: 1em;
+  padding: 1rem;
   background-color: #353434;
 }
 footer ul {
