--- a/styles/sass/Composants/_step.scss
+++ b/styles/sass/Composants/_step.scss
@@ -18,13 +18,13 @@
     }
 
     .step{
-        width: calc(100% - 0.5em);
+        width: calc(100% - 0.5rem);
         display: flex;
         justify-content: flex-start;
         align-items: center;
         background-color: $light-grey;
         border-radius: 30px;        
-        padding: 2em 0;
+        padding: 2rem 0;
         margin: 10px 0;
         transition: background-color $transition-duration;
 
@@ -39,21 +39,21 @@
             align-items: center;
             margin: 0;
             position: relative;
-            left: -0.5em;
+            left: -0.5rem;
     
             & span{
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                width: 1.5em;
-                height: 1.5em;
+                width: 1.5rem;
+                height: 1.5rem;
                 border-radius: 50%;
                 color: white;
                 background-color: $primary-color;
             }
     
             & i {
-                margin: 0 1em;
+                margin: 0 1rem;
                 color: gray;
                 transition: color $transition-duration;
             }
