--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -1,19 +1,28 @@
 @charset "UTF-8";
+/*
+@keyframes hidden {
+    99% { z-index: 2; }
+    100% { z-index: -1; }    
+}*/
 @import url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
 @-webkit-keyframes hidden {
   99% {
-    z-index: 2;
+    position: relative;
+    left: 0px;
   }
   100% {
-    z-index: -1;
+    position: absolute;
+    left: -5000px;
   }
 }
 @keyframes hidden {
   99% {
-    z-index: 2;
+    position: relative;
+    left: 0px;
   }
   100% {
-    z-index: -1;
+    position: absolute;
+    left: -5000px;
   }
 }
 @-webkit-keyframes rotation {
@@ -38,6 +47,22 @@
     opacity: 1;
   }
 }
+@-webkit-keyframes show {
+  99% {
+    position: absolute;
+  }
+  100% {
+    position: static;
+  }
+}
+@keyframes show {
+  99% {
+    position: absolute;
+  }
+  100% {
+    position: static;
+  }
+}
 /*
     voir le problème des fonts
 */
@@ -54,6 +79,8 @@ body {
   font-family: "Roboto", sans-serif;
   color: #333;
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 main {
