--- a/styles/sass/Base/_global.scss
+++ b/styles/sass/Base/_global.scss
@@ -12,6 +12,8 @@ body{
     font-family: $font-text;
     color: $black;
     min-height: 100%;
+    display: flex;
+    flex-direction: column;
     
 }
 
