--- a/styles/sass/Composants/_loading.scss
+++ b/styles/sass/Composants/_loading.scss
@@ -1,15 +1,15 @@
 
 
+
+
 .loading-container{
-    position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 2;
     display: flex;
     justify-content: center;
-    align-items: flex-start;  
+    align-items: center;  
+    flex: 1;
     background-color: white;
-    padding-top: 200px;
     overflow: hidden;
     transform-origin: top;
     animation: hidden 3s 0s forwards;
