--- a/styles/sass/Composants/_loading.scss
+++ b/styles/sass/Composants/_loading.scss
@@ -6,6 +6,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;  
     flex: 1;
@@ -14,16 +15,21 @@
     transform-origin: top;
     animation: hidden 3s 0s forwards;
 
+    p{
+        font-size: 2rem;
+        color: $primary-color;
+    }
+
     .loading{
-        width: 3rem;
-        height: 3rem;
-        border: 3px solid;
+        width: 5rem;
+        height: 5rem;
+        border: 5px solid;
         border-top-color: transparent;
-        border-right-color: $primary-color;
-        border-bottom-color: $primary-color;
-        border-left-color: $primary-color;
+        border-right-color: $secondary-color;
+        border-bottom-color: $secondary-color;
+        border-left-color: $secondary-color;
         border-radius: 50%;
 
-        animation: rotation 1s 0s linear 4;
+        animation: rotation 1s 0s linear 4, changeColorBorder 3s 0s linear;
     }
 }
