--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -102,6 +102,16 @@
     position: static;
   }
 }
+@-webkit-keyframes showUnderline {
+  to {
+    transform: scaleX(1);
+  }
+}
+@keyframes showUnderline {
+  to {
+    transform: scaleX(1);
+  }
+}
 /*
     voir le problème des fonts
 */
@@ -256,40 +266,48 @@ header .fa-arrow-right {
 @media screen and (min-width: 992px) {
   .menu {
     flex-direction: row;
-    align-items: center;
+    justify-content: space-between;
   }
 }
-
-.meal-section {
+.menu .meal-section {
   display: flex;
   flex-direction: column;
 }
-.meal-section .meal-section-title {
+@media screen and (min-width: 992px) {
+  .menu .meal-section {
+    width: 30%;
+  }
+}
+.menu .meal-section .meal-section-title {
   font-size: 1.2rem;
   margin-bottom: 5px;
 }
-.meal-section .underline {
+.menu .meal-section .underline {
   height: 3px;
   width: 50px;
   background-color: #99E2D0;
+  transform-origin: left;
+  transform: scaleX(0);
+  -webkit-animation: showUnderline 3s 0s ease-in-out forwards;
+          animation: showUnderline 3s 0s ease-in-out forwards;
 }
-.meal-section .meal-list {
+.menu .meal-section .meal-list {
   display: flex;
   flex-direction: column;
 }
-.meal-section .meal-list .meal-item:nth-child(1) {
+.menu .meal-section .meal-list .meal-item:nth-child(1) {
   -webkit-animation: showing 1.5s linear 0.5s forwards;
           animation: showing 1.5s linear 0.5s forwards;
 }
-.meal-section .meal-list .meal-item:nth-child(2) {
+.menu .meal-section .meal-list .meal-item:nth-child(2) {
   -webkit-animation: showing 1.5s linear 0.8s forwards;
           animation: showing 1.5s linear 0.8s forwards;
 }
-.meal-section .meal-list .meal-item:nth-child(3) {
+.menu .meal-section .meal-list .meal-item:nth-child(3) {
   -webkit-animation: showing 1.5s linear 1.1s forwards;
           animation: showing 1.5s linear 1.1s forwards;
 }
-.meal-section .meal-list .meal-item:nth-child(4) {
+.menu .meal-section .meal-list .meal-item:nth-child(4) {
   -webkit-animation: showing 1.5s linear 1.4s forwards;
           animation: showing 1.5s linear 1.4s forwards;
 }
@@ -361,7 +379,6 @@ main section {
   position: relative;
   top: -60px;
   background-color: #f4f2f2;
-  max-width: 576px;
   margin: auto;
 }
 @media screen and (min-width: 576px) {
